# ggpo

./: CMakeLists.txt
.github/workflows/: tests.yml
src/cmake/: helper_methods.cmake
src/include/: ggponet.h
src/lib/ggpo/: log.cpp  main.cpp  platform_linux.cpp  platform_linux.h  poll.cpp  poll.h
src/lib/ggpo/backends/: p2p.cpp  synctest.cpp
src/lib/ggpo/network/: udp.cpp  udp_proto.cpp
tests/: CMakeLists.txt  integration_tests.cpp  protocol_tests.cpp
